feat: introduce a sudoku captcha
