# backend/internal/transport/http/v1/hug/handler.go
@@ -9,7 +9,7 @@ import (
 )
 
 type service interface {
-	SuggestHug(ctx context.Context, giverID, receiverID uuid.UUID, hugType string, comment *string) (*models.Hug, *models.User, error)
+	SuggestHug(ctx context.Context, giverID, receiverID uuid.UUID, hugType string, comment *string, captchaToken *string) (*models.Hug, *models.User, error)
 	AcceptHug(ctx context.Context, hugID, receiverID uuid.UUID) (*models.Hug, error)
 	DeclineHug(ctx context.Context, hugID, receiverID uuid.UUID) error
 	CancelHug(ctx context.Context, hugID, giverID uuid.UUID) error
